# Reactions

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  Makefile  README.md  configuration.mk
.github/workflows/: build.yml  make.yml  test.yml
cmake/: mkdir-p.cmake
config/: debug.mk  release.mk
examples/: CMakeLists.txt  quick-start.cpp
it/: CMakeLists.txt  RcNothrowThrowExceptionCase.cpp  WithStringCase.cpp  doctest-nolint.h
src/: CMakeLists.txt  Command.h  Fork.h  Front.h  Response.h
src/Reactions/: Command.h  Exit.h  Parameter.h  Reaction.h
src/Reactions/command/: Argument.h  CmEmpty.h  CmLive.h  NthArg.cpp  NthArg.h
src/Reactions/exit/: ExFlag.h  ExNever.h
src/Reactions/fork/: FkArgRegex.h  FkElse.h  FkWithName.h
src/Reactions/front/: Console.h  Farewell.h  Welcome.h
src/Reactions/misc/: CommandAsString.h  FirstWord.h  Interface.h  LeftTrimmed.h  Scalar.h  ScalarBox.h  StringOf.h
src/Reactions/parameter/: PrPositiveInt.h  PrString.h
src/Reactions/reaction/: RcExit.h  RcFork.cpp  RcFork.h  RcGlued.h  RcMapped.h  RcNothing.h  RcNothrow.h  RcParameterized.h  RcText.h  RcWithEffect.cpp  RcWithEffect.h
src/Reactions/response/: RsEmpty.h  RsError.h  RsGlued.h  RsMapped.h  RsText.h
src/command/: Argument.h  CmEmpty.h
src/exit/: ExFlag.h
src/fork/: FkArgRegex.cpp  FkWithName.h
src/front/: Console.h  Farewell.h  Welcome.h
src/misc/: FirstWord.h
src/misc/owning/: in.h  make.h  makeOut.h  out.h
src/parameter/: PrPositiveInt.h
src/reaction/: RcExit.h  RcFork.cpp  RcGlued.h  RcNothing.h  RcWithEffect.cpp  RcWithEffect.h
src/response/: RsEmpty.h  RsError.h  RsGlued.h  RsMapped.h  RsText.h
tests/: CMakeLists.txt  StubTest.cpp  doctest-nolint.h
tests/command/: NthArgTest.cpp
tests/misc/: StringOfTest.cpp
tests/reactions/: RcNothrowTest.cpp
